# recall

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  DEVELOPMENT_RULES.md  HANDBOOK.md  README.md  ROADMAP.md  USAGE.md  WORKFLOWS.md  rust-toolchain.toml  todo.md  x
assets/: model2vec.json
assets/model2vec-rs/: config.json  model.safetensors
docs/: COMPATIBILITY.md  PRD-v1.0.md  README.md  RELEASE.md  USAGE.md
docs/_templates/: adr.md  change.md  issue.md  progress.md
docs/benchmarks/: README.md  baseline-2026-02-02.md
docs/history/: README.md
docs/history/changes/: CHANGE-2026-02-01-deterministic-structured-queries.md  CHANGE-2026-02-01-file-locking-busy-timeout.md  CHANGE-2026-02-01-query-limit-offset-json.md  CHANGE-2026-02-02-backlog-flush.md  CHANGE-2026-02-02-rql-pipeline-clause-order.md  CHANGE-2026-02-02-v1-0-release.md  CHANGE-2026-02-03-global-config-store-discovery.md  README.md
docs/history/decisions/: ADR-2026-02-02-rql-pipeline-clause-order.md  README.md
docs/issues/: README.md
docs/issues/active/: ISSUE-2026-02-01-query-limit-offset-json.md  ISSUE-2026-02-01-schema-versioning-migrations-ann-fts.md  ISSUE-2026-02-02-core-principles-canonical-glossary.md  README.md  (+2 more)
docs/progress/: README.md
history/changes/: CHANGE-2026-02-03-sqlite-vec.md
history/decisions/: ADR-2026-02-03-sqlite-vec-hard-break.md
schemas/: response.schema.json
scripts/: bench_gen.py  bench_run.py  package_release.sh
src/: ann.rs  cli.rs  config.rs  context.rs  embed.rs  ingest.rs  main.rs  model.rs  output.rs  query.rs  rql.rs  sql.rs  store.rs  transfer.rs
team/: AGENT.md  AGENT_ARCH.md  AGENT_DEV.md  AGENT_PM.md  AGENT_QA.md  ORGANIZATION.md
tests/: cli_golden.rs  determinism.rs
tests/snapshots/: cli_golden__add.snap  cli_golden__context.snap  cli_golden__guide.snap  cli_golden__query.snap  cli_golden__query_structured_filter.snap  cli_golden__search.snap  cli_golden__search_sanitized.snap  cli_golden__stats.snap
(+73 files in other folders)
