[package]
name = "recall"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.5"
globset = "0.4"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting"] }
base64 = "0.22"

[dev-dependencies]
insta = { version = "1.39", features = ["json"] }
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
jsonschema = "0.18"
